--- a/jose/scss/components/_sidebar.scss
+++ b/jose/scss/components/_sidebar.scss
@@ -1,43 +1,48 @@
+@import 'variables.scss';
+
 .menu-lists{
 
 }
 
-.sidebar .menu-item  .fa-chevron-up{
-  display:none;
-}
-.sidebar .menu-item  .fa-chevron-down{
-  display:inline-block;
-}
+.sidebar{
 
-.sidebar .menu-item:hover .fa-chevron-up{
-  display:inline-block;
-}
-
-.sidebar .menu-item:hover .fa-chevron-down{
-  display:none;
-}
-
-.sidebar .menu-item:hover .dropdown{
-  display:block;
-}
-
-.sidebar .menu-item a{
-  display:block;
-  padding:12px 0;
-  text-decoration: none;
-  color:#333;
-}
-.sidebar .menu-item a:hover{
-  color:#665df5
-}
-
-.sidebar .dropdown{
-  padding:0 8px 8px;
-}
-
-.sidebar .dropdown{
-  display:none;
-}
+  .menu-item  .fa-chevron-up{
+    display:none;
+  }
+   .menu-item  .fa-chevron-down{
+    display:inline-block;
+  }
+  
+   .menu-item:hover .fa-chevron-up{
+    display:inline-block;
+  }
+  
+   .menu-item:hover .fa-chevron-down{
+    display:none;
+  }
+  
+   .menu-item:hover .dropdown{
+    display:block;
+  }
+  
+   .menu-item a{
+    display:block;
+    padding:12px 0;
+    text-decoration: none;
+    color:#333;
+  }
+   .menu-item a:hover{
+    color:$primary
+  }
+  
+   .dropdown{
+    padding:0 8px 8px;
+  }
+  
+   .dropdown{
+    display:none;
+  }
+} 
 
 .sidebar-nav{
   position: fixed;
@@ -46,47 +51,45 @@
   bottom: 0;
   width: 60px;
   background: #04050A;
+  .menu-item {
+    &:not(.is-active) a:hover{
+      color:#fff;
+    }
+    &.is-active a{
+      color:$primary;
+      border-color:$primary;
+    }
+    a {
+    display:block;
+    padding:5px;
+    color:#e1e1e1;
+    width:calc(100% - 4px);
+    text-align: center;
+    margin:32px 0;
+    border-left:4px solid transparent;
+  }
+  }
+  .user-face{
+    position: absolute;
+    bottom:16px;
+    left:0;
+    height:60px;
+    width:60px;
+    padding:12px;
+    img {
+      border-radius: 100%;
+    }
+    
+  }
+  .logo{
+    height:44px;
+    width:44px;
+    margin:8px;
+    padding:2px;
+    background-color: #333;
+    border-radius:4px;
+  }
 }
-
-.sidebar-nav .menu-item a{
-  display:block;
-  padding:5px;
-  color:#e1e1e1;
-  width:calc(100% - 4px);
-  text-align: center;
-  margin:32px 0;
-  border-left:4px solid transparent;
-}
-
-.sidebar-nav .menu-item.is-active a{
-  color:#665df5;
-  border-color:#665df5;
-}
-.sidebar-nav .menu-item:not(.is-active) a:hover{
-  color:#fff;
-}
-
-.sidebar-nav .user-face{
-  position: absolute;
-  bottom:16px;
-  left:0;
-  height:60px;
-  width:60px;
-  padding:12px;
-}
-.sidebar-nav .logo{
-  height:44px;
-  width:44px;
-  margin:8px;
-  padding:2px;
-  background-color: #333;
-  border-radius:4px;
-}
-.sidebar-nav .user-face img{
-  border-radius: 100%;
-
-}
-
 body.sidebar-open{
   padding-left:60px;
 }
