--- a/jose/scss/components/_sliders.scss
+++ b/jose/scss/components/_sliders.scss
@@ -1,41 +1,48 @@
-.slider .slider-item .image{
-  margin:0;
-}
+@import 'variables.scss';
 
-.slider .slider-image{
-  border-radius:4px;
-  margin-bottom:16px;
-  overflow:hidden;
-}
+.slider {
+  .slider-item .image{
+    margin:0;
+  }
+  .slider-image{
+    border-radius:4px;
+    margin-bottom:16px;
+    overflow:hidden;
+  }
+  .slider-items{
+    display:flex;
+    padding:0;
+    text-decoration: none;
+    list-style: none;
+    gap: 0;
+    margin-left:-2px;
+    margin-right:-2px;
+  }
+  .slider-item {
+    width:100%;
+    border:2px solid transparent;
+    cursor: pointer;
+    opacity:.8;
+    transition: .14s ease-in;
+    overflow: hidden;
+    &.is-active{
+      border-color:$primary;
+      opacity:1;
+    }
+    &:first-child{
+      border-top-left-radius: 40px;
+      border-bottom-left-radius: 40px;
+    }
+    &:nth-child(5){
+      border-top-right-radius: 40px;
+      border-bottom-right-radius: 40px;
+    }
+    &:hover{
+      opacity:.9;
+    }
 
-.slider .slider-items{
-  display:flex;
-}
-
-.slider .slider-item {
-  width:100%;
-  border:2px solid transparent;
-  cursor: pointer;
-  opacity:.8;
-  transition: .14s ease-in;
-  overflow: hidden;
-}
-
-.slider-item:first-child{
-  border-top-left-radius: 40px;
-  border-bottom-left-radius: 40px;
-}
-
-.slider-item:nth-child(5){
-  border-top-right-radius: 40px;
-  border-bottom-right-radius: 40px;
-}
-
-.slider .slider-item:hover{
-  opacity:.9;
-}
-
-.slider .slider-item.is-active{
-  border-color:#665df5;
-  opacity:1;
+    img{
+      display:block;
+    }
+  }
 }
