--- a/tvieira/scss/main.scss
+++ b/tvieira/scss/main.scss
@@ -1,3 +1,14 @@
+@import 'components/buttons.scss';
+@import 'components/cards.scss';
+@import 'components/forms.scss';
+@import 'components/grid.scss';
+@import 'components/header.scss';
+@import 'components/footer.scss';
+@import 'components/table.scss';
+@import 'components/tabs.scss';
+@import 'mixin.scss';
+@import 'variables.scss';
+
     body{
         margin:0px;
         background-color: #f1e8e8;
