--- a/jose/scss/main.scss
+++ b/jose/scss/main.scss
@@ -1,7 +1,7 @@
-@import 'components/buttons.scss';
-@import 'components/cards.scss';
-@import 'components/grid.scss';
-@import 'components/forms.scss';
+@import -  'components/buttons.scss';
+@import -  'components/cards.scss';
+@import -  'components/grid.scss';
+@import -  'components/forms.scss';
 
 body {
   margin: 0;
