--- a/tvieira/scss/all.scss
+++ b/tvieira/scss/all.scss
@@ -7,6 +7,7 @@
 @import 'components/slider.scss';
 @import 'components/table.scss';
 @import 'components/tabs.scss';
+@import 'mixin.scss';
 @import 'variables.scss';
 @import 'dashboard.scss';
 @import 'product.scss';
