--- a/tvieira/Components/footer/index.html
+++ b/tvieira/Components/footer/index.html
@@ -14,21 +14,10 @@
     <div clas="column is-3">
         <ul class="menu-list">
             <li class="menu-item">
-                <a href="Alexandre/index.html" target="_blank">Alexandre</a>
+                <a href="/Alexandre/index.html" target="_blank">Alexandre</a>
             </li>
             <li class="menu-item">
-                <a href="Carlos/index.html" target="_blank">Carlos Campos</a>
-            </li>
-        </ul>
-    </div>
-
-    <div clas="column is-3">
-        <ul class="menu-list">
-            <li class="menu-item">
-                <a href="inesCorreia/index.html" target="_blank">Inês Correia</a>
-            </li>
-            <li class="menu-item">
-                <a href="pedro/index.html" target="_blank">Pedro Barbosa</a>
+                <a href="/Carlos/first_project/index.html" target="_blank">Carlos Campos</a>
             </li>
         </ul>
     </div>
@@ -36,11 +25,22 @@
     <div clas="column is-3">
         <ul class="menu-list">
             <li class="menu-item">
-                <a href="tvieira/index.html" target="_blank">Tânia Vieira</a>
+                <a href="/inesfolder/index.html" target="_blank">Inês Correia</a>
+            </li>
+            <li class="menu-item">
+                <a href="/pedro/index.html" target="_blank">Pedro Barbosa</a>
+            </li>
+        </ul>
+    </div>
+
+    <div clas="column is-3">
+        <ul class="menu-list">
+            <li class="menu-item">
+                <a href="/tvieira/index.html" target="_blank">Tânia Vieira</a>
             </li>
 
             <li class="menu-item">
-                <a href="vitor/index.html" target="_blank">Vitor Coelho</a>
+                <a href="/vitor/index.html" target="_blank">Vitor Coelho</a>
             </li>
         </ul>
     </div>
