--- a/tvieira/Components/Grid/index.html
+++ b/tvieira/Components/Grid/index.html
@@ -5,20 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid</title>
+    <title>Products</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/tvieira/styles/main.css" />
-    <link rel="stylesheet buttons" href="buttons.css" > 
-    <link rel="stylesheet grid" href="grid.css">
+    <link rel="stylesheet" href="/tvieira/css/all.css" />
 
 </head>
 
-<body>
+<body class="">
 
     <header class="header">
-        
+        <div class="navbar-wrapper">
+            <a href="index.html">        
         <figure class="logo">
             <img src="/tvieira/images/rodacork.png" alt="logo Rodacork">
             <span class="page-title is-vertical-middle">
@@ -46,9 +45,13 @@
             <li class="menu-item">
                 <a href="/tvieira/dashboard/index.html" target="_blank">Dashboard</a>
             </li>
+            <li class="menu-item">
+                <a href="/tvieira/products/product-1.html" target="_blank">Product-1</a>
+            </li>
         </ul>
     </nav>
     </header>
+
 
   <main class="grid-page">
     <div class="container">
