initial products page structure

--- a/jose/scss/products.scss
+++ b/jose/scss/products.scss
@@ -6,10 +6,10 @@
   padding:0;
 }
 
-.product-section .sales-price{
+.products-section .sales-price{
   font-size:32px;
   color:#ff9800;
 }
-.product-section .price{
+.products-section .price{
   font-size:18px;
 }
