--- a/jose/css/main.css
+++ b/jose/css/main.css
@@ -1,7 +1,5 @@
 .button:not(.is-small), .input:not(.is-small), .select:not(.is-small) {
   position: relative;
-  -moz-appearance: none;
-  -webkit-appearance: none;
   line-height: 14px;
   border-width: 1px;
   border-style: solid;
@@ -26,8 +24,6 @@
 
 .button.is-small, .input.is-small, .select.is-small {
   position: relative;
-  -moz-appearance: none;
-  -webkit-appearance: none;
   line-height: 14px;
   border-width: 1px;
   border-style: solid;
@@ -35,12 +31,12 @@
   box-sizing: border-box;
   transition: .2s ease-in;
   outline: 0 !important;
-  padding-bottom: 12px;
-  padding-top: 12px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-bottom: 8px;
+  padding-top: 8px;
+  padding-left: 12px;
+  padding-right: 12px;
   height: 36px;
-  line-height: 14px; }
+  line-height: 12px; }
   .button.is-small:focus, .input.is-small:focus, .select.is-small:focus, .is-focused.button.is-small, .is-focused.input.is-small, .is-focused.select.is-small, .button.is-small:active, .input.is-small:active, .select.is-small:active, .is-active.button.is-small, .is-active.input.is-small, .is-active.select.is-small {
     outline: none;
     box-shadow: none; }
@@ -157,8 +153,6 @@
 
 .button:not(.is-small), .input:not(.is-small), .select:not(.is-small) {
   position: relative;
-  -moz-appearance: none;
-  -webkit-appearance: none;
   line-height: 14px;
   border-width: 1px;
   border-style: solid;
@@ -183,8 +177,6 @@
 
 .button.is-small, .input.is-small, .select.is-small {
   position: relative;
-  -moz-appearance: none;
-  -webkit-appearance: none;
   line-height: 14px;
   border-width: 1px;
   border-style: solid;
@@ -192,12 +184,12 @@
   box-sizing: border-box;
   transition: .2s ease-in;
   outline: 0 !important;
-  padding-bottom: 12px;
-  padding-top: 12px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-bottom: 8px;
+  padding-top: 8px;
+  padding-left: 12px;
+  padding-right: 12px;
   height: 36px;
-  line-height: 14px; }
+  line-height: 12px; }
   .button.is-small:focus, .input.is-small:focus, .select.is-small:focus, .is-focused.button.is-small, .is-focused.input.is-small, .is-focused.select.is-small, .button.is-small:active, .input.is-small:active, .select.is-small:active, .is-active.button.is-small, .is-active.input.is-small, .is-active.select.is-small {
     outline: none;
     box-shadow: none; }
@@ -271,11 +263,6 @@
   .textarea:focus {
     border: 1px solid #665df5; }
 
-.select {
-  /* -moz-appearance:none; 
-    -webkit-appearance:none; 
-    appearance:none; */ }
-
 .control {
   display: inline-block; }
   .control label {
@@ -344,6 +331,9 @@ figure {
 
 .link:hover {
   color: #524ac2; }
+
+.is-pulled-right {
+  float: right; }
 
 .header {
   background: #04050A;
