--- a/jose/css/products.css
+++ b/jose/css/products.css
@@ -72,9 +72,57 @@
   color: #ff9800;
   padding: 0; }
 
-.product-section .sales-price {
+.products-section .sales-price {
   font-size: 32px;
   color: #ff9800; }
 
-.product-section .price {
+.products-section .price {
   font-size: 18px; }
+
+.breadcrumb {
+  list-style: none;
+  margin: 16px 0;
+  padding: 0; }
+  .breadcrumb li {
+    display: inline-block;
+    padding: 8px; }
+    .breadcrumb li:nth-child(2n) {
+      padding: 0; }
+
+.product-section .control {
+  display: flex;
+  justify-content: space-between; }
+
+.product-section label {
+  display: block;
+  margin-bottom: 16px; }
+  .product-section label:not(:first-child) {
+    margin-top: 16px; }
+  .product-section label .icon {
+    padding: 0; }
+
+.product-section .product-detail .title {
+  margin-top: 8px;
+  margin-bottom: 4px; }
+
+.product-section .product-detail .sales-price {
+  font-size: 24px;
+  margin-top: 16px; }
+
+.product-section .product-detail .price {
+  font-size: 16px;
+  margin-bottom: 16px; }
+
+.product-section .product-controls {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 16px; }
+  .product-section .product-controls span {
+    line-height: 32px; }
+  .product-section .product-controls select:nth-child(2) {
+    min-width: 0;
+    margin: 0 8px;
+    width: auto; }
+  .product-section .product-controls select:nth-child(3) {
+    min-width: 0;
+    width: auto; }
