--- a/jose/scss/products.scss
+++ b/jose/scss/products.scss
@@ -13,3 +13,66 @@
 .products-section .price{
   font-size:18px;
 }
+
+.breadcrumb{
+  list-style: none;
+  margin:16px 0;
+  padding:0;
+  li{
+    display:inline-block;
+    padding:8px;
+    &:nth-child(2n) {
+      padding:0;
+    }
+  }
+}
+
+.product-section{
+  .control{
+    display:flex;
+    justify-content: space-between;
+  }
+  label{
+    display: block;
+    margin-bottom:16px;
+    &:not(:first-child){
+      margin-top:16px;
+    }
+    .icon{
+      padding:0;
+    }
+  }
+  .product-detail{
+    .title{
+      margin-top:8px;
+      margin-bottom:4px;
+    }
+    .sales-price{
+      font-size:24px;
+      margin-top:16px;
+    }
+    .price{
+      font-size:16px;
+      margin-bottom:16px;
+    }
+  }
+
+  .product-controls{
+    display:flex;
+    justify-content: flex-end;
+    margin-bottom:16px;
+    span{
+      line-height:32px;
+    }
+    select:nth-child(2){
+      min-width: 0;
+      margin: 0 8px;
+      width:auto;
+
+    }
+    select:nth-child(3){
+      min-width: 0;
+      width:auto;
+    }
+  }
+}
