--- a/Carlos/scss/style.scss
+++ b/Carlos/scss/style.scss
@@ -121,7 +121,7 @@ figure{
     width: 24.99%;
 }
 .column.is-4 {
-    width: 33%;
+    width: 32%;
 }
 .column.is-5 {
     width: 41%;
@@ -134,6 +134,9 @@ figure{
 }
 .column.is-8{
     width: 66%;
+}
+.column.is-9{
+  width: 74%;
 }
 
 /* Carousel */
