--- a/vitor/scss/components/_buttons.scss
+++ b/vitor/scss/components/_buttons.scss
@@ -1,104 +1,112 @@
-.buttons{
+@import 'variables.scss';
+@import 'mixins.scss';
 
+$button-border:1px solid transparent;
+$button-border-hover:1px solid transparent;
+$button-text-color:#fff;
+
+.buttons {
+  display: flex;
+  margin-top:16px;
+
+  &.is-aligned-right{
+    justify-content: flex-end;
+  }
+  &.is-spaced-between{
+    justify-content: space-between;
+  }
 }
 
 .button{
-    border: 0.5px solid transparent;
-    padding: 8px 20px;
-    color: #fff;
-    border-radius: 4px;
-    background-color: #333;
+  &:not(.is-small){
+    @extend %control;
+  }
+
+  &.is-small{
+    @extend %control-small;
+  }
+
+  color:$button-text-color;
+  background-color:#333;
+  text-decoration: none;
+
+  &:not(:last-child){
+    margin-right:8px;
+  }
+
+  &.is-fullwidth{
+    width:100%;
+  }
+
+  &.is-large{
+    font-size: 20px;
+  }
+
+  /*
+    Button primary
+  */
+
+  &.is-primary{
+    background: darken($primary, 10%);
+    background-color: $primary;
+    &:hover{
+      cursor: pointer;
+      background: darken($primary, 10%);
+    }
+  }
+
+  /*
+    Button success
+  */
+
+  &.is-success{
+    border-color: darken($success, 10%);
+    background-color:$success;
+    &:hover{
+      cursor: pointer;
+      background: darken($success, 10%);
+    }
+  }
+
+  &.is-info{
+    background-color:$info;
+    border-color: darken($info, 10%);
+
+    &:hover{
+      cursor: pointer;
+      background: darken($info, 10%);
+    }
+  }
+
+  &.is-danger{
+    border-color: darken($danger, 10%);
+    background-color:$danger;
+    &:hover{
+      cursor: pointer;
+      background: darken($danger, 10%);
+    }
+  }
+
+  /*
+    Button warning TODO
+  */
+
+  &.is-warning{
+    border-color:#c77802;
+    background-color:$warning;
+    &:hover{
+      cursor: pointer;
+      background-color: #c77802;
+    }
+  }
 }
-
-/* button primary */
-
-.button.is-primary{
-    border-color: #4a917e;
-    background-color: #55a38e;
-    transition: background-color .2s ease-in;
-}
-
-.button.is-primary:hover{
-    cursor: pointer;
-    background-color: #4a917e;
-}
-
-/* button secondary */
-
-.button.is-secondary{
-    border-color: #575757;
-    background-color: #6b6b6b;
-    transition: background-color .2s ease-in;
-}
-
-.button.is-secondary:hover{
-    cursor: pointer;
-    background-color: #575757;
-}
-
-/* button danger */
-
-.button.is-danger{
-    border-color: #bb162c;
-    background-color: #dd1732;
-    transition: background-color .2s ease-in;
-}
-
-.button.is-danger:hover{
-    cursor: pointer;
-    background-color: #bb162c;
-}
-
-/* button success */
-
-.button.is-success{
-    border-color: #1e7c3e;
-    background-color: #239248;
-    transition: background-color .2s ease-in;
-}
-
-.button.is-success:hover{
-    cursor: pointer;
-    background-color: #1e7c3e;
-}
-
-/* button info */
-
-.button.is-info{
-    border-color: #274e88;
-    background-color: #305fa5;
-    transition: background-color .2s ease-in;
-}
-
-.button.is-info:hover{
-    cursor: pointer;
-    background-color: #274e88;
-}
-
-/* button warning */
-
-.button.is-warning{
-    border-color: #a04d0a;
-    background-color: #c56312;
-    transition: background-color .2s ease-in;
-}
-
-.button.is-warning:hover{
-    cursor: pointer;
-    background-color: #a04d0a;
-}
-
 
 /*
  Page specific styles, not to be used in component
 */
 
 
-
-.buttons-page{
- 
-}
 .buttons-page code{
   float:right;
-  line-height:40px;
+  line-height:42px;
 }
