--- a/vitor/scss/components/_cards.scss
+++ b/vitor/scss/components/_cards.scss
@@ -1,3 +1,14 @@
-.cards{
-    
+@import 'variables.scss';
+
+$background:#fff;
+$padding:16px;
+
+.card{
+  display:block;
+  background:$background;
+  border-radius:$radius;
+  .card-content{
+    padding:$padding;
+    box-sizing: border-box;
+  }
 }
