update end -class-wednesday-14April

--- a/tvieira/scss/components/_tabs.scss
+++ b/tvieira/scss/components/_tabs.scss
@@ -1,2 +1,39 @@
-@import 'mixin.scss';
 @import 'variables.scss';
+
+.tabs{
+  display: flex;
+  list-style: none;
+  padding:0;
+  margin:16px 0 0;
+}
+.tabs .tab{
+  padding:16px;
+  width:50%;
+  border-left:1px solid #bbb;
+  border-right:1px solid #bbb;
+  border-top:1px solid #bbb;
+  background:#e1e1e1;
+}
+
+.tabs .tab:not(.is-active){
+  border-bottom:1px solid #bbb;
+}
+
+.tabs .tab.is-active{
+  background:none;
+}
+
+.tab-content{
+  padding: 16px;
+  border-left:1px solid #bbb;
+  border-right:1px solid #bbb;
+  border-bottom:1px solid #bbb;
+}
+
+.tab-content .row{
+  margin:0;
+}
+
+.tab-content .column{
+  padding:0;
+}
