--- a/tvieira/scss/components/_cards.scss
+++ b/tvieira/scss/components/_cards.scss
@@ -1,13 +1,15 @@
 @import 'mixin.scss';
 @import 'variables.scss';
 
+$background:#fff;
+$padding:16px;
+
 .card{
     display:block;
-    background: white;
+    background:$background;
     border-radius:4px; 
-}
-
-.card .card-content{
-    padding:16px;
-    box-sizing:border-box;
+    .card-content{
+        padding:$padding;
+        box-sizing:border-box;
+    }
 }
