--- a/tvieira/scss/all.scss
+++ b/tvieira/scss/all.scss
@@ -6,8 +6,8 @@
 @import 'components/slider.scss';
 @import 'components/table.scss';
 @import 'components/tabs.scss';
-@import 'mixin.scss';
-@import 'variables.scss';
+@import 'components/mixin.scss';
+@import 'components/variables.scss';
 @import 'dashboard.scss';
 @import 'product.scss';
 @import 'main.scss'; 
