--- a/tvieira/scss/dashboard.scss
+++ b/tvieira/scss/dashboard.scss
@@ -5,8 +5,8 @@
 @import 'components/sidebar.scss';
 @import 'components/table.scss';
 @import 'components/tabs.scss';
-@import 'mixin.scss';
-@import 'variables.scss';
+@import 'components/mixin.scss';
+@import 'components/variables.scss';
 
 
 
