--- a/tvieira/scss/product.scss
+++ b/tvieira/scss/product.scss
@@ -1,5 +1,7 @@
 @import 'components/tabs.scss';
-@import 'components/sliders.scss';
+@import 'components/slider.scss';
+@import 'components/mixin.scss';
+@import 'components/variables.scss';
 
 .stars .icon{
   color:#ff9800;
