--- a/tvieira/Components/header/index.html
+++ b/tvieira/Components/header/index.html
@@ -15,15 +15,14 @@
 
 <body class="">
 
-    <header class="header">
-        <div class="navbar-wrapper">
-            <a href="index.html">        
+    <a href="/index.html" target="_blank">        
         <figure class="logo">
             <img src="/tvieira/images/rodacork.png" alt="logo Rodacork">
             <span class="page-title is-vertical-middle">
                 RodaCork
             </span>
         </figure>
+    </a>
 
     <nav class="navbar">
         <ul class="menu-list">
@@ -47,6 +46,9 @@
             </li>
             <li class="menu-item">
                 <a href="/tvieira/products/product-1.html" target="_blank">Product-1</a>
+            </li>
+            <li class="menu-item">
+                <a href="/tvieira/login.html" class="button is-primary-black is-small" style="margin-left:16px;" target="_blank">Login</a>
             </li>
         </ul>
     </nav>
