--- a/tvieira/scss/components/_header.scss
+++ b/tvieira/scss/components/_header.scss
@@ -1,2 +1,74 @@
 @import 'mixin.scss';
 @import 'variables.scss';
+
+.header{
+    background-color: #fafafa;
+    padding:12px;
+    min-height:40px;
+}
+
+.header .logo {
+    float: left;
+    padding: 8px;
+    padding: 0 8px 0 0;
+    margin: 0;
+}
+
+.header .logo img{
+    height: 32px;
+    border-radius:8px;
+}
+
+.header .logo img{
+    height: 32px;
+    border-radius:4px;
+}
+
+    
+.header .page-title{
+    font-weight:600;
+    color: #000;
+    vertical-align: 62%;
+}
+
+.header .navbar{
+    justify-content:space-between;
+}
+
+.navbar-wrapper{
+    display:flex;
+    justify-content: space-between;
+}
+
+
+.navbar .menu-list .menu-item{
+    display: inline-block;
+    padding: 8px;
+}
+
+.navbar .menu-list .menu-item a {
+    text-decoration: none;
+    line-height:18px;
+    color: #333;
+    padding-right: 8px;
+    padding-left: 8px;
+}
+
+.navbar .menu-list .menu-item a:hover{
+    font-weight: 500;
+    border-left:2px solid #333;
+    border-right:2px solid #333;
+}
+
+.navbar .menu-list .menu-item a.button{
+    color: #fff;
+    padding: 15px 35px;
+}
+
+.navbar .menu-list .menu-item a.button:hover{
+    cursor:pointer;
+    background-color:#333333;
+    border-right: 4px solid #000000;
+    color: #ffffff;
+}
+
