--- a/tvieira/scss/components/_slider.scss
+++ b/tvieira/scss/components/_slider.scss
@@ -1,4 +1,5 @@
-@import 'variables.scss';
+@import 'components/mixin.scss';
+@import 'components/variables.scss';
 
 .menu-lists{
 
@@ -32,7 +33,7 @@
     color:#333;
   }
    .menu-item a:hover{
-    color:$primary
+    color:$primary;
   }
   
    .dropdown{
